<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgUserPhoto"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="105dp"
            android:src="@drawable/logo"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_below="@id/imgUserPhoto"
            android:layout_marginTop="10dp"
            app:errorEnabled="true"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_below="@id/etEmail"
            android:layout_marginTop="10dp"
            app:errorEnabled="true"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_below="@id/etPassword"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue"
                android:text="@string/login" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="80dp"
            android:layout_marginHorizontal="10dp"
            android:layout_below="@id/ll_login"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCreateAnAccount"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/blue"
                android:layout_height="wrap_content"
                android:text="@string/create_an_account" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>